--- a/backup/CommunityData_Embed.html
+++ b/backup/CommunityData_Embed.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Monongalia County Block Groups – ACS Income</title>
+  <title>Monongalia County Block Groups – ACS Layers</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
   <style>
     html, body, #map {
       height: 100%;
@@ -14,78 +15,139 @@
   </style>
 </head>
 <body>
-  <h1>Hello from GitHub</h1>
   <div id="map"></div>
   <script>
-  // Initialize the map
-  const map = L.map("map").setView([39.63, -79.95], 13);
-  L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-    attribution: "&copy; OpenStreetMap contributors"
-  }).addTo(map);
+    const map = L.map("map").setView([39.63, -79.95], 13);
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      attribution: "&copy; OpenStreetMap contributors"
+    }).addTo(map);
 
-  // Fetch ACS data
-  async function fetchACSData() {
-    const url = "https://api.census.gov/data/2021/acs/acs5?get=B19013_001E,NAME&for=block%20group:*&in=state:54&in=county:061";
-    const res = await fetch(url);
-    const json = await res.json();
-
-    const [headers, ...rows] = json;
-    const lookup = {};
-    rows.forEach(row => {
-      const rec = Object.fromEntries(headers.map((h, i) => [h, row[i]]));
-      const geoid = rec.state + rec.county + rec.tract + rec["block group"];
-      lookup[geoid] = {
-        name: rec.NAME,
-        income: rec.B19013_001E
-      };
-    });
-    return lookup;
-  }
-
-  // Load GeoJSON and render map layer
-  async function renderMap() {
-    const acsData = await fetchACSData();
-    const geoRes = await fetch("https://communityplanning.github.io/censusGeoJson/MonCountyBG.geojson");
-    const geojson = await geoRes.json();
-
-    // Create the income layer (not auto-added yet)
-    const incomeLayer = L.geoJSON(geojson, {
-      style: feature => {
-        const geoid = feature.properties.GEOID;
-        const value = acsData[geoid]?.income;
-        let fillColor = "gray";
-        if (value !== undefined && !isNaN(+value)) {
-          const income = +value;
-          fillColor = income > 60000 ? "green" :
-                      income > 40000 ? "orange" : "red";
+    // --- Utility: compute quartiles ---
+    function getQuartiles(arr) {
+      const sorted = arr.filter(v => !isNaN(v)).sort((a, b) => a - b);
+      const q = (p) => {
+        const pos = (sorted.length - 1) * p;
+        const base = Math.floor(pos);
+        const rest = pos - base;
+        if (sorted[base + 1] !== undefined) {
+          return sorted[base] + rest * (sorted[base + 1] - sorted[base]);
+        } else {
+          return sorted[base];
         }
-        return {
+      };
+      return [q(0.25), q(0.5), q(0.75)];
+    }
+
+    function getQuartileColorFunc(values, colors) {
+      const [q1, q2, q3] = getQuartiles(values);
+      return (v) => {
+        if (isNaN(v)) return "#ccc";
+        if (v <= q1) return colors[0];
+        if (v <= q2) return colors[1];
+        if (v <= q3) return colors[2];
+        return colors[3];
+      };
+    }
+
+    async function fetchACSData() {
+      const url = "https://api.census.gov/data/2021/acs/acs5?get=B19013_001E,B01003_001E,NAME&for=block%20group:*&in=state:54&in=county:061";
+      const res = await fetch(url);
+      const json = await res.json();
+
+      const [headers, ...rows] = json;
+      const lookup = {};
+      rows.forEach(row => {
+        const rec = Object.fromEntries(headers.map((h, i) => [h, row[i]]));
+        const geoid = rec.state + rec.county + rec.tract + rec["block group"];
+        lookup[geoid] = {
+          name: rec.NAME,
+          income: +rec.B19013_001E,
+          population: +rec.B01003_001E
+        };
+      });
+      return lookup;
+    }
+
+    async function renderMap() {
+      const acsData = await fetchACSData();
+      const geoRes = await fetch("https://communityplanning.github.io/censusGeoJson/MonCountyBG.geojson");
+      const geojson = await geoRes.json();
+
+      // --- Calculate density in people per square mile ---
+      geojson.features.forEach(f => {
+        const geoid = f.properties.GEOID;
+        const pop = acsData[geoid]?.population || 0;
+        const areaSqMeters = turf.area(f); 
+        const areaSqMiles = areaSqMeters / 2.59e+6; // 1 sq mi = 2.59 million sq m
+        f.properties.density = areaSqMiles > 0 ? (pop / areaSqMiles) : 0;
+      });
+
+      // Collect values
+      const incomes = Object.values(acsData).map(d => d.income);
+      const pops = Object.values(acsData).map(d => d.population);
+      const densities = geojson.features.map(f => f.properties.density);
+
+      // Quartile color functions
+      const incomeColor = getQuartileColorFunc(incomes, ["#fee5d9", "#fcae91", "#fb6a4a", "#cb181d"]);
+      const popColor = getQuartileColorFunc(pops, ["#deebf7", "#9ecae1", "#4292c6", "#08519c"]);
+      const densityColor = getQuartileColorFunc(densities, ["#edf8e9", "#bae4b3", "#74c476", "#238b45"]); // green scale
+
+      // Median Income Layer
+      const incomeLayer = L.geoJSON(geojson, {
+        style: f => ({
           color: "#333",
           weight: 1,
-          fillColor,
-          fillOpacity: 0.5
-        };
-      },
-      onEachFeature: (feature, layer) => {
-        const geoid = feature.properties.GEOID;
-        const acs = acsData[geoid];
-        const popupContent = acs
-          ? `<strong>${acs.name}</strong><br>Median Income: $${acs.income}`
-          : "No ACS data available";
-        layer.bindPopup(popupContent);
-      }
-    });
+          fillColor: incomeColor(acsData[f.properties.GEOID]?.income),
+          fillOpacity: 0.6
+        }),
+        onEachFeature: (f, layer) => {
+          const acs = acsData[f.properties.GEOID];
+          if (acs) {
+            layer.bindPopup(`<strong>${acs.name}</strong><br>Median Income: $${acs.income.toLocaleString()}`);
+          }
+        }
+      });
 
-    // Add layer control (base maps vs overlays)
-    const baseMaps = {}; // (only OSM now, already added)
-    const overlayMaps = {
-      "Median Income": incomeLayer
-    };
-    L.control.layers(baseMaps, overlayMaps, { collapsed: false }).addTo(map);
-  }
+      // Population Layer
+      const popLayer = L.geoJSON(geojson, {
+        style: f => ({
+          color: "#333",
+          weight: 1,
+          fillColor: popColor(acsData[f.properties.GEOID]?.population),
+          fillOpacity: 0.6
+        }),
+        onEachFeature: (f, layer) => {
+          const acs = acsData[f.properties.GEOID];
+          if (acs) {
+            layer.bindPopup(`<strong>${acs.name}</strong><br>Population: ${acs.population.toLocaleString()}`);
+          }
+        }
+      });
 
-  renderMap().catch(err => console.error("Map loading error:", err));
-</script>
+      // Density Layer (per sq mi)
+      const densityLayer = L.geoJSON(geojson, {
+        style: f => ({
+          color: "#333",
+          weight: 1,
+          fillColor: densityColor(f.properties.density),
+          fillOpacity: 0.6
+        }),
+        onEachFeature: (f, layer) => {
+          const acs = acsData[f.properties.GEOID];
+          layer.bindPopup(`<strong>${acs?.name || "Block Group"}</strong><br>
+            Population Density: ${Math.round(f.properties.density).toLocaleString()} people/sq mi`);
+        }
+      });
 
+      // Layer control
+      L.control.layers({}, {
+        "Median Income": incomeLayer,
+        "Population": popLayer,
+        "Population Density (per sq mi)": densityLayer
+      }, { collapsed: false }).addTo(map);
+    }
+
+    renderMap().catch(err => console.error("Map loading error:", err));
+  </script>
 </body>
 </html>
